--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         "nyholm/psr7": "^1.8",
         "symfony/dependency-injection": "^4.4.20||^5.0.11||^6.0",
         "symfony/http-kernel": "^4.4.20||^5.0.11||^6.0",
-        "sentry/sentry-symfony": "^4.12"
+        "sentry/sentry-symfony": "4.*"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.19||<=3.16.0",
